css/indexstyle.css
body, html {
  height: 100%;
  width: 100%;
  font-family: Roboto, sans-serif;
  color: #ecf0f1;
  background-color: #2c3e50;
  margin: 0;
  padding: 0;
}



.img-circle {
  margin: 1%;
  box-sizing: border-box;
  border-radius: 50% 50%;
  box-shadow: black 0px 0px 5px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

img {
  margin: 1%;
  box-sizing: border-box;
  box-shadow: black 0px 0px 5px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

h1 {
  text-align: center;
  padding-bottom: 0px;
  padding-top: 10px;
  font-size:2em;
}

p {
  padding: 10px;
  font-size: 1.2em;
}

.info-line{
  text-align: center;
}

.info-line a{
  padding: 0 !important;
  text-decoration: none;
  color: #ecf0f1;
  text-align: center;
  display: inline !important;
  margin: 0;
}

.inline-link a:link, a:active, a:visited {
  padding: 0 !important;
  text-decoration: none;
  color: #ecf0f1;
  text-align: left !important;
  display: inline !important;
  margin: 0;
}

.inline-link a:hover {
  text-decoration: underline;
}

a:link, a:hover, a:active, a:visited {
  padding: 10px;
  text-decoration: none;
  color: #ecf0f1;
  text-align: center;
  display: block;
  margin: 0;
}

nav {
  background-color: #95a5a6;
  margin: 0px;
  padding: 0px;
}

nav a{
  text-decoration: none;
  color: #fff;
  transition: .3s background-color;
}

nav a:hover{
  background-color: #7f8c8d;
}

nav ul{
  list-style: none;
  text-align: center;
  padding: 0;
  margin: 0;
}

nav li{
  font-size: 1.2em;
  line-height: 20px;
  height: 40px;
  border-bottom: 1px solid #888;
}

.panel {
  height: 100%;
  width: 100%;
  margin: 0;
  color: #ecf0f1;
  padding: 0px;
}

.blue {
  background-color: #3498db;
}

.turquoise {
  background-color: #1abc9c;
}

.red {
  background-color: #e74c3c;
}

.purple {
  background-color: #9b59b6;
}

.navy {
  background-color: #34495e;
}

.project-link{
  text-align: center;
  padding-top: 0px;
}

.project-link a:hover {
  text-decoration: underline !important;
}

.project-link a:active {
  padding: 50px;
  display: inline-block;
}

@media screen and (min-width: 600px) {
  nav li {
    width: 120px;
    border-bottom: none;
    height: 50px;
    line-height: 30px;
    font-size: 1.4em;
    display: inline-block;
    margin-right: -7px;
  }

  a {
    text-align: center;
  }

  .container{
    margin: auto;
    max-width: 800px;
  }
}

